fix submit button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h2 class="card-header">Search for a City:</h2>
                 <form>
                     <input name="cityName" id="cityName" type="text" autofocus="true" placeholder="Memphis"/>
-                    <button id="search-btn" type="submit">Search</button>
+                    <button id="search-btn">Search</button>
                 </form>
             </div>
         </div>
