get daily weather for temp, humidity, windspeed

--- a/index.html
+++ b/index.html
@@ -14,25 +14,27 @@
 
     <main class="flex-row justify-space-between">
         <!--Search For a City-->
-        <div class="col-12 col-md-4">
+        <div class="row">
+            <div class="col-12 col-md-4">
+                <div>
+                    <h2 class="card-header">Search for a City:</h2>
+                    <form>
+                        <input name="cityName" id="cityName" type="text" autofocus="true" placeholder="Memphis"/>
+                        <button id="search-btn">Search</button>
+                    </form>
+                </div>
+            </div>
+             <!--List of Previous Searches-->
             <div>
-                <h2 class="card-header">Search for a City:</h2>
-                <form>
-                    <input name="cityName" id="cityName" type="text" autofocus="true" placeholder="Memphis"/>
-                    <button id="search-btn">Search</button>
-                </form>
+
             </div>
         </div>
-        <!--List of Previous Searches-->
-        <div>
 
-        </div>
         <div class="row">
             <!--Display Daily Weather-->
             <div id="daily-weather" class="col-12 col-md-8 border">
                 <div class="card-body">
-                    <h3 class="card-header" id="city-search-term"></h3>
-                    <img id="weather-icon" alt=""/>
+                    <h3 class="card-header" id="city-search-term"><img id="weather-icon" alt=""/></h3>
                     <p id="temperature"></p>
                     <p id="humidity"></p>
                     <p id="wind"></p>
