--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <!--Display Daily Weather-->
             <div id="daily-weather" class="col-12 col-md-8 border">
                 <div class="card-body">
-                    <h3 class="card-header" id="city-search-term"><img id="weather-icon" alt=""/></h3>
+                    <h3 class="card-header" id="city-search-term"></h3>
+                        <div class="icon-container"><img id="weather-icon" alt=""/> </div>
                     <p id="temperature"></p>
                     <p id="humidity"></p>
                     <p id="wind"></p>
