add forecast data

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </form>
                 </div>
                 <!--List of Previous Searches-->
-                <div>
+                <div id="city-list">
 
                 </div>
             </div>
@@ -43,9 +43,7 @@
             <!--5 Day Forecast-->
             <div class="container">
                     <h3 class="card-header">5 Day Forecast:</h3>
-                    <div class="row" id="forecast-weather">
-                        <div>
-                        </div>
+                    <div class="d-flex flex-row me-4" id="forecast-weather">
                     </div>
             </div>
         </div>
