weather card changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <!--Display Daily Weather-->
-            <div id="daily-weather" class="col-12 col-md-8 border border-dark rounded">
+            <div id="daily-weather" class="col-12 col-md-8">
                 <div class="card-body">
                     <h3 class="card-header" id="city-search-term"></h3>
                     <img class="weather-img m-2" id="weather-icon" alt="">
@@ -43,7 +43,7 @@
             <!--5 Day Forecast-->
             <div class="container">
                     <h3 class="card-header">5 Day Forecast:</h3>
-                    <div class="d-flex flex-row me-4" id="forecast-weather">
+                    <div class="d-flex flex-row justify-content-center m-4" id="forecast-weather">
                     </div>
             </div>
         </div>
