add items to local storage

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <!--5 Day Forecast-->
             <div class="container">
                     <h3 class="card-header">5 Day Forecast:</h3>
-                    <div class="d-flex flex-row justify-content-center m-4" id="forecast-weather">
+                    <div class="d-flex flex-row justify-content-center" id="forecast-weather">
                     </div>
             </div>
         </div>
